# libampl

./: .gitignore  AUTHORS  INSTALL  LICENSE  Makefile  Makefile.am  README  Readme.macosx  configure.ac
Arch/Linux/: makedefs-gcc
Arch/Mac/: makedefs-gcc
Arch/Msys/: makedefs-gcc
Src/: Makefile  get_ampl_library
debian/: changelog  control  rules
libampl/: Makefile.am
libampl/src/: Makefile.am  get_ampl_library
