lib_LTLIBRARIES = libampl.la libfuncadd0.la
libampl_la_SOURCES = \
  src/solvers/asldate.c \
  src/solvers/atof.c \
  src/solvers/auxinfo.c \
  src/solvers/avltree.c \
  src/solvers/b_search.c \
  src/solvers/basename.c \
  src/solvers/bscanf.c \
  src/solvers/com2eval.c \
  src/solvers/comeval.c \
  src/solvers/con1ival.c \
  src/solvers/con2ival.c \
  src/solvers/con2val.c \
  src/solvers/conadj.c \
  src/solvers/conpval.c \
  src/solvers/conscale.c \
  src/solvers/conval.c \
  src/solvers/derprop.c \
  src/solvers/details.c \
  src/solvers/dtoa1.c \
  src/solvers/duthes.c \
  src/solvers/dynlink.c \
  src/solvers/f_read.c \
  src/solvers/fg_read.c \
  src/solvers/fg_write.c \
  src/solvers/fgh_read.c \
  src/solvers/fpecatch.c \
  src/solvers/fpinit.c \
  src/solvers/fullhes.c \
  src/solvers/func_add.c \
  src/solvers/funcadd1.c \
  src/solvers/g_fmt.c \
  src/solvers/genrowno.c \
  src/solvers/getenv.c \
  src/solvers/getstub.c \
  src/solvers/htcl.c \
  src/solvers/indic_cons.c \
  src/solvers/jac0dim.c \
  src/solvers/jac2dim.c \
  src/solvers/jacdim.c \
  src/solvers/jacinc.c \
  src/solvers/jacinc1.c \
  src/solvers/libnamsave.c \
  src/solvers/mach.c \
  src/solvers/mainexit.c \
  src/solvers/mip_pri.c \
  src/solvers/misc.c \
  src/solvers/mpec_adj.c \
  src/solvers/mypow.c \
  src/solvers/names.c \
  src/solvers/nl_obj.c \
  src/solvers/nqpcheck.c \
  src/solvers/nqpcheckZ.c \
  src/solvers/obj2val.c \
  src/solvers/obj_adj.c \
  src/solvers/obj_prec.c \
  src/solvers/objconst.c \
  src/solvers/objval.c \
  src/solvers/objval_.c \
  src/solvers/op_type.c \
  src/solvers/pfg_read.c \
  src/solvers/pfghread.c \
  src/solvers/printf.c \
  src/solvers/pshvprod.c \
  src/solvers/punknown.c \
  src/solvers/qp_read.c \
  src/solvers/qpcheck.c \
  src/solvers/qpcheckZ.c \
  src/solvers/qsortv.c \
  src/solvers/readsol.c \
  src/solvers/repwhere.c \
  src/solvers/rops.c \
  src/solvers/rops2.c \
  src/solvers/sigcatch.c \
  src/solvers/sos_add.c \
  src/solvers/sphes.c \
  src/solvers/sscanf.c \
  src/solvers/stderr.c \
  src/solvers/studchk0.c \
  src/solvers/suf_sos.c \
  src/solvers/value.c \
  src/solvers/writesol.c \
  src/solvers/wrtsol_.c \
  src/solvers/ws_desc.c \
  src/solvers/wsu_desc.c \
  src/solvers/x2check.c \
  src/solvers/xectim.c \
  src/solvers/xp1known.c \
  src/solvers/xp2known.c
libampl_la_CFLAGS = -DNON_STDIO -Wall -Wstrict-prototypes -pthread -fPIC -fno-strict-aliasing -Isrc/solvers
libampl_includedir = $(includedir)

libfuncadd0_la_SOURCES = src/solvers/funcadd0.c
libfuncadd0_la_CFLAGS = -DNON_STDIO -Wall -Wstrict-prototypes -pthread -fPIC -fno-strict-aliasing -Isrc/solvers
libfuncadd0_includedir = $(includedir)
